# vlasov_poisson_solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: demo.ipynb  free_streaming.py  landau_damping.py  two_stream.py
tests/: test_advection.py  test_integration.py  test_poisson.py
vlasov_poisson_solver/: __init__.py
vlasov_poisson_solver/src/: __init__.py  advection.py  config.py  poisson.py  sharding.py  solver_types.py  vlasov_solver.py
